# Unchained

./: .gitignore  README.md  pyproject.toml  unchained.py
benchmarks/: compare_frameworks.py
docs/: ARCHITECTURE.md  USER_MANUAL.md
examples/: coder.py  data_analyst.py  researcher.py
examples/pickmystack/: app.py
examples/pickmystack/knowledge/: deployment_options.md  frameworks_comparison.md  models_guide.md
examples/pickmystack/tools/: __init__.py  benchmark_fetcher.py  cost_estimator.py  doc_retriever.py
examples/pickmystack/ui/: Dockerfile  README_DEPLOY.md  app_ui.py  requirements.txt
examples/pickmystack/ui/.streamlit/: config.toml
tests/: test_unchained.py
